--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-cli": "^2.0.1",
+    "react-native-navigation": "^1.1.478",
     "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
